# Generated by Django 3.1.4 on 2020-12-24 01:33

from django.db import migrations, models
import django.db.models.deletion
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Genre',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(help_text='Enter an item genre (e.g. Decoration)', max_length=200)),
            ],
        ),
        migrations.CreateModel(
            name='Item',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=200)),
                ('description', models.TextField(help_text='Describe the item.', max_length=1000)),
                ('genre', models.ManyToManyField(help_text='Select one or more genres for this item.', to='catalog.Genre')),
            ],
        ),
        migrations.CreateModel(
            name='Location',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100)),
                ('description', models.TextField(max_length=500)),
            ],
        ),
        migrations.CreateModel(
            name='ItemInstance',
            fields=[
                ('id_item', models.UUIDField(default=uuid.uuid4, help_text='Unique ID for this item instance.', primary_key=True, serialize=False)),
                ('imprint', models.CharField(max_length=500)),
                ('acquisition_date', models.DateField(blank=True, null=True, verbose_name='Acquired')),
                ('dispossession_date', models.DateField(blank=True, null=True, verbose_name='Dispossessed')),
                ('last_used', models.DateField(blank=True, null=True, verbose_name='Last Used')),
                ('price', models.FloatField()),
                ('status', models.CharField(blank=True, choices=[('g', 'Good'), ('l', 'Loaned'), ('a', 'Almost Out'), ('o', 'Out'), ('b', 'Broken'), ('d', 'Damaged'), ('t', 'Thrown Away'), ('m', 'Maintenance')], default='g', help_text='Item Status', max_length=1)),
                ('item', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to='catalog.item')),
            ],
            options={
                'ordering': ['-last_used'],
            },
        ),
    ]
